--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/graphemes/consonants/
     - assets/graphemes/diacritics/
+    - assets/graphemes/punctuation/
     - assets/graphemes/vowels/
 
   # An image asset can refer to one or more resolution-specific "variants", see
